<resources>
    <!--Menu Strings-->
    <string name="app_name">C196 Program Scheduling App</string>
    <string name="action_settings">Settings</string>
    <string name="none">None</string>
    <string name="del_button">Delete</string>
    <string name="details_button">Info</string>
    <string name="channel_name">Notification</string>
    <string name="channel_desc">Notifications for C196 App</string>
    <string name="menu_share">Share Notes</string>

    <!--MainActivity Strings-->
    <string name="title_activity_main">C196 Program Scheduling App</string>
    <string name="welcome_message">Welcome to the WGU personal degree program management application!\n\nPlease select from the choices below to get started.</string>
    <string name="term_name">Terms</string>
    <string name="term_view">View Terms</string>
    <string name="course_name">Courses</string>
    <string name="course_view">View Courses</string>
    <string name="obj_name">Assessments</string>
    <string name="obj_view">View Assessments</string>

    <!--ViewCourses Strings-->
    <string name="title_activity_view_courses">View Your Courses</string>

    <!--ViewTerms Strings-->
    <string name="title_activity_view_terms">View Your Terms</string>

    <!--ViewObjectives Strings-->
    <string name="title_activity_view_objectives">View Your Assessments</string>
    <string name="obj_no_goal_date">No Goal Date Selected</string>
    <string name="obj_goal_date_button">Set Date</string>
    <string name="obj_notify_button">Notify Me!</string>

    <!--AddTerm Strings-->
    <string name="title_activity_add_term">Add A Term</string>
    <string name="AT_term_title">Term Title</string>
    <string name="AT_term_title_hint">Enter title here</string>
    <string name="AT_term_start_hint">Select a start date</string>
    <string name="AT_term_end_hint">Select an end date</string>
    <string name="AT_button_start">Start Date</string>
    <string name="AT_button_end">End Date</string>
    <string name="AT_button_save">Save</string>
    <string name="AT_button_cancel">Cancel</string>

    <!--AddCourse Strings-->
    <string name="title_activity_add_course">Add A Course</string>
    <string name="AC_course_title">Course Title</string>
    <string name="AC_course_title_hint">Enter course title here</string>
    <string name="AC_start_date_hint">Select a start date</string>
    <string name="AC_end_date_hint">Select an end date</string>
    <string name="AC_desc_title">Course Description</string>
    <string name="AC_desc_hint">Enter description here</string>
    <string name="AC_button_start">Start Date</string>
    <string name="AC_button_end">End Date</string>
    <string name="AC_button_save">Save</string>
    <string name="AC_button_cancel">Cancel</string>

    <!--AddObjective Strings-->
    <string name="title_activity_add_objective">Add An Assessment</string>
    <string name="ao_button_save">Save</string>
    <string name="ao_button_cancel">Cancel</string>
    <string name="ao_obj_title">Assessment Title</string>
    <string name="ao_obj_type">Assessment Type</string>
    <string name="ao_obj_description">Description</string>
    <string name="ao_obj_notes">Notes</string>
    <string-array name="ao_type_spinner">
        <item>Performance</item>
        <item>Objective</item>
    </string-array>

    <!--ObjectiveDetail Strings-->
    <string name="od_title">Assessment Title</string>
    <string name="od_type">Assessment Type</string>
    <string name="od_description">Description</string>
    <string name="od_notes">Notes</string>

    <!--CourseDetail Strings-->
    <string name="CD_title_tv">Course Title</string>
    <string name="CD_title_hint">Enter course title here</string>
    <string name="CD_desc_tv">Course Description</string>
    <string name="CD_desc_hint">Enter course description here</string>
    <string name="CD_switch_btn">Notify Me!\t\t</string>
    <string name="CD_start_hint">Select a start date</string>
    <string name="CD_end_hint">Select an end date</string>
    <string name="CD_notes_title">Course Notes (Optional)</string>
    <string name="CD_notes_hint">Enter course notes here</string>
    <string name="CD_status_title">Course Status</string>
    <string name="CD_term_title">Select Term</string>
    <string name="CD_notify_text">Not Active</string>
    <string name="CD_instructor_title">Choose Instructor(s)</string>
    <string name="CD_objective_title">Choose Objective(s)</string>
    <string name="CD_button_start">Start Date</string>
    <string name="CD_button_end">End Date</string>
    <string name="CD_button_save">Save</string>
    <string name="CD_button_cancel">Cancel</string>
    <string name="CD_button_add">Add</string>
    <string name="CD_button_detail">Details</string>
    <string name="CD_button_view">Selected</string>
    <string-array name="course_status_array">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>
    <string name="title_activity_course_detail">Course Detail</string>

    <!--DetailTermFrag Strings-->
    <string name="DT_term_title">Term Title</string>
    <string name="DT_term_start">Start Date</string>
    <string name="DT_term_end">End Date</string>

    <!--DetailInstructFrag Strings-->
    <string name="DI_name">Instructor Name</string>
    <string name="DI_email">Email</string>
    <string name="DI_phone">Phone Number</string>
    <string name="DI_button_done">Done</string>
    <string name="DI_check_box">Assigned to Course</string>
    <string name="DI_button_save">Save Changes</string>
    <string name="DI_button_edit">Edit Assessment</string>

    <!--DetailObjFrag Strings-->
    <string name="DO_assessment_title">Assessment Title</string>
    <string name="DO_assessment_datetime">Time</string>
    <string name="DO_assessment_type">Type</string>
    <string name="DO_assessment_description">Description</string>
    <string name="DO_assessment_notes">Notes</string>
    <string name="title_activity_objective_detail">View Assessment Details</string>

</resources>
