<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewTermTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/term_view"
        app:layout_constraintEnd_toEndOf="@+id/welcomeTextView"
        app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <Button
        android:id="@+id/viewTermsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/term_name"
        android:onClick="viewTerms"
        app:layout_constraintEnd_toEndOf="@+id/viewTermTextView"
        app:layout_constraintStart_toStartOf="@+id/viewTermTextView"
        app:layout_constraintTop_toBottomOf="@+id/viewTermTextView" />

    <TextView
        android:id="@+id/viewCoursesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_view"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/viewTermsBtn"
        app:layout_constraintStart_toStartOf="@+id/viewTermsBtn"
        app:layout_constraintTop_toBottomOf="@+id/viewTermsBtn" />

    <Button
        android:id="@+id/viewCoursesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_name"
        android:onClick="viewCourses"
        app:layout_constraintEnd_toEndOf="@+id/viewCoursesTextView"
        app:layout_constraintStart_toStartOf="@+id/viewCoursesTextView"
        app:layout_constraintTop_toBottomOf="@+id/viewCoursesTextView" />

    <TextView
        android:id="@+id/viewOBjsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/obj_view"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="@+id/viewCoursesBtn"
        app:layout_constraintStart_toStartOf="@+id/viewCoursesBtn"
        app:layout_constraintTop_toBottomOf="@+id/viewCoursesBtn" />

    <Button
        android:id="@+id/viewObjsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/obj_name"
        android:onClick="viewObjectives"
        app:layout_constraintEnd_toEndOf="@+id/viewOBjsTextView"
        app:layout_constraintStart_toStartOf="@+id/viewOBjsTextView"
        app:layout_constraintTop_toBottomOf="@+id/viewOBjsTextView" />

</android.support.constraint.ConstraintLayout>