<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CourseDetailActivity"
    tools:showIn="@layout/activity_course_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dcTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/CD_title_tv"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/dcTitleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/CD_title_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/dcDescTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/AC_desc_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/dcDescET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/CD_desc_hint"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dcStartDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/CD_start_hint" />

                <Button
                    android:id="@+id/dcStartDateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/CD_button_start"
                    android:onClick="detailDatePicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/dcStartDateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/CD_switch_btn" />

                <TextView
                    android:id="@+id/dcStartDateNotifyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/CD_notify_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dcEndDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/CD_end_hint" />

                <Button
                    android:id="@+id/dcEndDateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/CD_button_end"
                    android:onClick="detailDatePicker"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/dcEndDateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/CD_switch_btn" />

                <TextView
                    android:id="@+id/dcEndDateNotifyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="viewEnd"
                    android:text="@string/CD_notify_text"  />
            </LinearLayout>

            <TextView
                android:id="@+id/dcCourseNotesTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/CD_notes_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/dcCourseNotesET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/CD_notes_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/dcStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"
                android:text="@string/CD_status_title" />

            <Spinner
                android:id="@+id/dcStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/course_status_array"/>

            <TextView
                android:id="@+id/dcTermText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CD_term_title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"/>

            <Spinner
                android:id="@+id/dcTermSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/dcInstructTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/CD_instructor_title"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/dcInstructSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dcAddInstructBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_add"
                    android:onClick="addDetail"/>

                <Button
                    android:id="@+id/dcInstructDetailBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_detail"
                    android:onClick="showDetail"/>

                <Button
                    android:id="@+id/dcViewInstructBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_view"
                    android:onClick="showSelected"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dcObjTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:textAlignment="center"
                android:text="@string/CD_objective_title" />

            <Spinner
                android:id="@+id/dcObjectiveSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dcAddObjectiveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_add"
                    android:onClick="addDetail"/>

                <Button
                    android:id="@+id/dcObjectiveDetailBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_detail"
                    android:onClick="showDetail"/>

                <Button
                    android:id="@+id/dcObjectiveViewBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_view"
                    android:onClick="showSelected"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/dcSaveCourseDetailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_save"
                    android:onClick="saveDetails"/>

                <Button
                    android:id="@+id/dcCancelCourseDetailsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/CD_button_cancel"
                    android:onClick="cancelDetails"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>