<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddCourse"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_course" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/addCourseTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/AC_course_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/addCourseTitleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/AC_course_title_hint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/addCourseDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/AC_desc_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/addCourseDescET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/AC_desc_hint"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/acStartDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/AC_start_date_hint" />

                <Button
                    android:id="@+id/acStartDateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:onClick="courseDatePicker"
                    android:text="@string/AC_button_start"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/acEndDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archivo_black"
                    android:onClick="courseDatePicker"
                    android:text="@string/AC_end_date_hint" />

                <Button
                    android:id="@+id/acEndDateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:onClick="courseDatePicker"
                    android:text="@string/AC_button_end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/acSaveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="saveCourse"
                    android:text="@string/AT_button_save"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <Button
                    android:id="@+id/acCancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:onClick="cancelCourse"
                    android:text="@string/AC_button_cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>