<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.DetailObjFrag"
    android:id="@+id/detailObjectiveFragLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DO_assessment_title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"/>

            <TextView
                android:id="@+id/doTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"
                android:text="@string/DO_assessment_datetime" />

            <TextView
                android:id="@+id/doTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"
                android:text="@string/DO_assessment_type" />

            <TextView
                android:id="@+id/doType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"
                android:text="@string/DO_assessment_description"/>

            <TextView
                android:id="@+id/doDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:fontFamily="@font/archivo_black"
                android:text="@string/DO_assessment_notes"/>

            <TextView
                android:id="@+id/doNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/menu_share" />

            <Button
                android:id="@+id/objEditBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/DI_button_edit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
